--- a/Parsetagram/Base.lproj/Main.storyboard
+++ b/Parsetagram/Base.lproj/Main.storyboard
@@ -89,6 +89,63 @@
                     <view key="view" contentMode="scaleToFill" id="Kqd-r6-FAT">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="92m-JQ-7Bj">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="480" id="tVX-ZC-EYF" customClass="PostCell" customModule="Parsetagram" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="480"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tVX-ZC-EYF" id="NVp-TM-irT">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="480"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="awI-dR-F4W">
+                                                    <rect key="frame" x="8" y="8" width="398" height="435.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="awI-dR-F4W" secondAttribute="height" multiplier="398:435" id="EAo-gN-zUN"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flowers are cool." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eLI-Bb-lCg">
+                                                    <rect key="frame" x="46.5" y="451.5" width="359.5" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Tim" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PqI-kb-W8C">
+                                                    <rect key="frame" x="8" y="451.5" width="30.5" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="eLI-Bb-lCg" secondAttribute="bottom" constant="8" id="3uv-uc-LyD"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="PqI-kb-W8C" secondAttribute="bottom" constant="-3" id="4kb-Pg-lmK"/>
+                                                <constraint firstAttribute="trailing" secondItem="eLI-Bb-lCg" secondAttribute="trailing" constant="8" id="7lH-ib-i8E"/>
+                                                <constraint firstItem="eLI-Bb-lCg" firstAttribute="top" secondItem="awI-dR-F4W" secondAttribute="bottom" constant="8" id="HMn-OK-gOv"/>
+                                                <constraint firstItem="PqI-kb-W8C" firstAttribute="firstBaseline" secondItem="eLI-Bb-lCg" secondAttribute="baseline" id="HVF-Nc-aV1"/>
+                                                <constraint firstAttribute="trailing" secondItem="awI-dR-F4W" secondAttribute="trailing" constant="8" id="Kqm-W6-Zp5"/>
+                                                <constraint firstItem="PqI-kb-W8C" firstAttribute="leading" secondItem="NVp-TM-irT" secondAttribute="leading" constant="8" id="PyF-7T-los"/>
+                                                <constraint firstItem="eLI-Bb-lCg" firstAttribute="top" secondItem="awI-dR-F4W" secondAttribute="bottom" constant="8" id="Vbg-Fs-Gf9"/>
+                                                <constraint firstItem="PqI-kb-W8C" firstAttribute="firstBaseline" secondItem="eLI-Bb-lCg" secondAttribute="firstBaseline" id="XBn-vO-A1f"/>
+                                                <constraint firstItem="PqI-kb-W8C" firstAttribute="centerY" secondItem="eLI-Bb-lCg" secondAttribute="centerY" id="afp-zY-aW8"/>
+                                                <constraint firstItem="awI-dR-F4W" firstAttribute="top" secondItem="NVp-TM-irT" secondAttribute="top" constant="8" id="eKn-Nc-ujo"/>
+                                                <constraint firstItem="awI-dR-F4W" firstAttribute="leading" secondItem="NVp-TM-irT" secondAttribute="leading" constant="8" id="g6n-rM-aZU"/>
+                                                <constraint firstItem="eLI-Bb-lCg" firstAttribute="leading" secondItem="PqI-kb-W8C" secondAttribute="trailing" constant="8" id="y6s-9A-cuG"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="captionLabel" destination="eLI-Bb-lCg" id="3ca-Df-fWr"/>
+                                            <outlet property="photoView" destination="awI-dR-F4W" id="12a-dG-T4x"/>
+                                            <outlet property="usernameLabel" destination="PqI-kb-W8C" id="IeN-GH-yu7"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="S4U-A7-E8k"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
@@ -99,10 +156,13 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="92m-JQ-7Bj" id="i15-nS-nMg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j7S-W1-Kc0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1558" y="125"/>
+            <point key="canvasLocation" x="1557.9710144927537" y="124.55357142857142"/>
         </scene>
         <!--Camera View Controller-->
         <scene sceneID="E1k-7V-2zw">
@@ -138,6 +198,7 @@
                         <viewLayoutGuide key="safeArea" id="IvD-M3-YIb"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="p8N-rV-rKU"/>
                     <connections>
                         <outlet property="commentField" destination="f1R-gN-ozF" id="boQ-P2-kEe"/>
                         <outlet property="imageView" destination="Vll-qN-81K" id="C7X-76-zFS"/>
@@ -157,6 +218,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="iyz-jc-uXV" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="3tb-pc-hd0"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="twW-fU-i43">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                         <autoresizingMask key="autoresizingMask"/>
