--- a/Parsetagram/Base.lproj/Main.storyboard
+++ b/Parsetagram/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="Parsetagram" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" customModule="Parsetagram" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -95,7 +95,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="480" id="tVX-ZC-EYF" customClass="PostCell" customModule="Parsetagram" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="480" id="tVX-ZC-EYF" customClass="PostCell" customModule="Parsetagram" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="480"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tVX-ZC-EYF" id="NVp-TM-irT">
@@ -143,6 +143,63 @@
                                             <outlet property="usernameLabel" destination="PqI-kb-W8C" id="IeN-GH-yu7"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentCell" id="kCq-4R-m8f" customClass="CommentCell" customModule="Parsetagram" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="508" width="414" height="37.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kCq-4R-m8f" id="rdl-Lv-WRb">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="37.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="blop" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l6E-Pu-pGo">
+                                                    <rect key="frame" x="16" y="6" width="36" height="21"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="this is a comment" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="btz-wh-82r">
+                                                    <rect key="frame" x="60" y="8" width="134" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="btz-wh-82r" secondAttribute="bottom" constant="8" id="3tm-g0-KlR"/>
+                                                <constraint firstItem="l6E-Pu-pGo" firstAttribute="top" secondItem="rdl-Lv-WRb" secondAttribute="top" constant="8" id="H29-Zx-zgo"/>
+                                                <constraint firstItem="btz-wh-82r" firstAttribute="top" secondItem="rdl-Lv-WRb" secondAttribute="top" constant="8" id="Yfl-8s-eUf"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="l6E-Pu-pGo" secondAttribute="bottom" constant="8" id="ZFw-yF-dw4"/>
+                                                <constraint firstItem="btz-wh-82r" firstAttribute="leading" secondItem="l6E-Pu-pGo" secondAttribute="trailing" constant="8" id="ivs-Fp-ojW"/>
+                                                <constraint firstItem="l6E-Pu-pGo" firstAttribute="leading" secondItem="rdl-Lv-WRb" secondAttribute="leading" constant="16" id="jVI-PD-cwL"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="btz-wh-82r" secondAttribute="trailing" constant="8" id="pIJ-za-HrH"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="commentLabel" destination="btz-wh-82r" id="hc0-TS-C1D"/>
+                                            <outlet property="nameLabel" destination="l6E-Pu-pGo" id="rve-BU-1K0"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AddCommentCell" id="gGS-vb-Qph">
+                                        <rect key="frame" x="0.0" y="545.5" width="414" height="37"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gGS-vb-Qph" id="MAN-b8-blm">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="37"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a comment..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nhO-SI-fr2">
+                                                    <rect key="frame" x="16" y="8" width="390" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="nhO-SI-fr2" firstAttribute="top" secondItem="MAN-b8-blm" secondAttribute="top" constant="8" id="B4r-Hz-kdJ"/>
+                                                <constraint firstAttribute="trailing" secondItem="nhO-SI-fr2" secondAttribute="trailing" constant="8" id="Wbz-Sg-mtd"/>
+                                                <constraint firstItem="nhO-SI-fr2" firstAttribute="leading" secondItem="MAN-b8-blm" secondAttribute="leading" constant="16" id="Z3d-L8-x4N"/>
+                                                <constraint firstAttribute="bottom" secondItem="nhO-SI-fr2" secondAttribute="bottom" constant="8" id="bZA-VN-Qaw"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
@@ -150,6 +207,11 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="IUk-Eb-9Zr">
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="F2H-GW-AFd">
+                            <connections>
+                                <action selector="onLogoutButton:" destination="v98-ys-Xe1" id="WAA-Le-n9e"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="+" image="insta_camera_btn" id="LqE-QF-ihO">
                             <connections>
                                 <segue destination="FRY-qt-hTS" kind="presentation" id="YXy-Ax-20D"/>
@@ -216,7 +278,7 @@
         <!--Navigation Controller-->
         <scene sceneID="rRa-So-k9i">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="iyz-jc-uXV" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="FeedNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="iyz-jc-uXV" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="3tb-pc-hd0"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="twW-fU-i43">
